  - command "moveoutput" moves an output between partitions
  - command "delpartition" deletes a partition
  - show partition name in "status" response
* tags
  - new tags "Grouping" (for ID3 "TIT1"), "Work" and "Conductor"
* input
  - curl: support "charset" parameter in URI fragment
  - ffmpeg: allow partial reads
  - io_uring: new plugin for local files on Linux (using liburing)
* archive
  - iso9660: support seeking
* database
  - upnp: drop support for libupnp versions older than 1.8
* playlist
  - cue: integrate contents in database
* decoder
  - mad: remove option "gapless", always do gapless
  - sidplay: add option "default_genre"
  - sidplay: map SID name field to "Album" tag
  - sidplay: add support for new song length format with libsidplayfp 2.0
  - vorbis, opus: improve seeking accuracy
* playlist
  - flac: support reading CUE sheets from remote FLAC files
* filter
  - ffmpeg: new plugin based on FFmpeg's libavfilter library
  - hdcd: new plugin based on FFmpeg's "af_hdcd" for HDCD playback
  - volume: convert S16 to S24 to preserve quality and reduce dithering noise
  - dsd: add integer-only DSD to PCM converter
* output
  - jack: add option "auto_destination_ports"
  - jack: report error details
  - pulse: add option "media_role"
  - solaris: support S8 and S32
* lower the real-time priority from 50 to 40
* switch to C++17
  - GCC 7 or clang 4 (or newer) recommended

ver 0.21.25 (2020/07/06)
* protocol:
  - fix crash when using "rangeid" while playing
* database
  - simple: automatically scan new mounts
  - upnp: fix compatibility with Plex DLNA
* storage
  - fix disappearing mounts after mounting twice
  - udisks: fix reading ".mpdignore"
* input
  - file: detect premature end of file
  - smbclient: don't send credentials to MPD clients
* decoder
  - opus: apply pre-skip and end trimming
  - opus: fix memory leak
  - opus: fix crash bug
  - vorbis: fix crash bug
* output
  - osx: improve sample rate selection
  - osx: fix noise while stopping